--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <section class="news">
  <%= render partial: 'application/navbar', locals: {back: false}%>
- <%= render partial: 'application/header', locals: {h1:"Новости", h1up:"News"}%>
+ <%= render partial: 'application/header', locals: {h1:"События", h1up:"Events"}%>
 <div class="content">
 
 <div class="search">
