--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <section class="news">
 <%= render partial: 'application/navbar', locals: {back: false}%>
-<%= render partial: 'application/header', locals: {h1:"Добавить новость", h1up:"User"}%>
+<%= render partial: 'application/header', locals: {h1:"Добавить событие", h1up:"User"}%>
 <div class="content">
   <div class="page">
 
