--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -1,6 +1,6 @@
 <section class="news">
  <%= render partial: 'application/navbar', locals: {back: false} %>
- <%= render partial: 'application/header', locals: {h1:"Новости | #{params[:tag]}", h1up:"News"} %>
+ <%= render partial: 'application/header', locals: {h1:"События | #{params[:tag]}", h1up:"Events"} %>
 <div class="content">
 
 <div class="search">
