--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <section class="newsiteam">
  <%= render partial: 'application/navbar', locals: {back: true, back_url: events_path}%>
- <%= render partial: 'application/header', locals: {h1:@event.title, h1up:"News", image_url: (get_image(@event.photos[0]).nil? ? '' : get_image(@event.photos[0]).image.url) }%>
+ <%= render partial: 'application/header', locals: {h1:@event.title, h1up:"Events", image_url: (get_image(@event.photos[0]).nil? ? '' : get_image(@event.photos[0]).image.url) }%>
 <div class="content">
 <div class="text">
     <div class="time"><%= @event.id.generation_time.day %>.<%= @event.id.generation_time.month %>.<%= @event.id.generation_time.year %></div>
