--- a/app/views/pages/dorado.html.erb
+++ b/app/views/pages/dorado.html.erb
@@ -7,9 +7,9 @@
 <p>Приватность и элегантный уют в гармоничном сочетании с открытой кухней порадуют гостей первого этажа в зале средиземноморской кухни – «Дорадо». Свежие продукты, идеи, комбинации вкусов и изысканные их сочетания не оставят равнодушными ценителей блюд из морепродуктов.</p>
 </div>
 <div class="menu">
-<a href="/assets/D_main.pdf">ОСН. МЕНЮ</a>
-<a href="/assets/D_bar.pdf">БАРНАЯ КАРТА</a>
-<a href="/assets/B_det.pdf">ДЕТСКОЕ МЕНЮ</a>
+    <%= link_to "ОСН. МЕНЮ", asset_path("D_main.pdf") %>
+    <%= link_to "БАРНАЯ КАРТА", asset_path("D_bar.pdf") %>
+    <%= link_to "ДЕТСКОЕ МЕНЮ", asset_path("B_det.pdf") %>
 </div>
 <div class="photos">
     <div class="photo-iteam"><%= image_tag("d01.jpg", class: "tobig", alt: "") %></div>
