--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -743,12 +743,12 @@ option, select{
 
 	.prev-btn {
 	    left: 20px;
-	    background-image:image-url('../img/left-arrow.png');
+	    // background-image:image-url('../img/left-arrow.png');
 	}
 
 	.next-btn {
 	    right: 20px;
-	     background-image:image-url('../img/right-arrow.png');
+	    // background-image:image-url('../img/right-arrow.png');
 	}
 
 	.nav-btns {
