--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>«Хмель Хаус» || Ресторан пивоварня || Hmel Haus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="8e89eeb47c58f95e" />
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
