--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
   <div class="page">
     <div class="user-images">
       <%= image_tag @user.image.url(:thumb) %>
+      <p id="notice"><%= notice %></p>
     </div>
     <div class="user-info">
       <div class="bs">
