--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,4 +3,27 @@
 <script src="//yastatic.net/share2/share.js"></script>
 <div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,twitter" data-counter=""></div>
 <span class="copy">Все права защищены &copy; ХмельХаус</span>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(53213446, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/53213446" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </footer>
+<div class="box-modal" id="boxUserFirstInfo" style="display: none;">
+	<div class="box-modal-content">
+		<h3>ВНИМАНИЕ!</h3>
+		<p>ВАМ УЖЕ ИСПОЛНИЛОСЬ 18 ЛЕТ ?</p>
+		<div class="box-modal_yes" onclick="return modalYes();">Да</div>
+	    <div class="box-modal_no"  onclick="return modalNo();">Нет</div>
+	</div>
+</div>
