--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="slider animated fadeIn">
 			<div class="slider-overlay">
 				<a href="/" class="logo animated flipInY">
-					<div class="rest">ресторан-пивоварня</div>
+					<div class="rest">ресторан пивоварня</div>
 				</a>
 	         <div class="zal">
 	         	<div class="zal-box">
@@ -40,7 +40,7 @@
           <div class="photo-iteam"><%= image_tag("d01.jpg", class: "tobig", alt: "") %></div>
         </div>
     	<div class="text">
-            <h2>Ресторан включается в себя три зала.</h2>
+            <h2>Ресторан включает в себя три зала.</h2>
 <p><h3>1 этаж – «Дорадо».</h3> Изысканный интерьер, винная комната, морепродукты и романтические вечера!</p>
 <p><h3>2 этаж – «Бавария».</h3> Роскошный большой зал, собственная пивоварня, европейское меню и шоу-программа.</p>
 <p><h3>Веранда</h3>При входе – атмосферная веранда, где действуют оба меню, а также детская игровая площадка.</p>
