--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,6 +1,6 @@
 <section class="news">
 <%= render partial: 'application/navbar', locals: {back: false}%>
-<%= render partial: 'application/header', locals: {h1:"Забронировать столик", h1up:"Contacts"}%>
+<%= render partial: 'application/header', locals: {h1:"Забронировать столик", h1up:"Reservation"}%>
 <div class="content">
 	<div class="text">
 		<p class="center">Заполните форму ниже, мы Вам перезвоним</p>
