--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
 <section class="news">
 <%= render partial: 'application/navbar', locals: {back: false}%>
-<%= render partial: 'application/header', locals: {h1:"Оставить отзыв", h1up:"Contacts"}%>
+<%= render partial: 'application/header', locals: {h1:"Оставить отзыв", h1up:"Review"}%>
 <div class="content">
 	<div class="text">
 		<p class="center">Здесь Вы можете оставить свой отзыв/комментарий/пожелание</p>
