--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,8 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image %>
+    <div class="file-upload">
+    <label>
+      <%= form.file_field :image %>
+      <span>Загрузить фото</span>
+    </label>
+    </div>
+    <div id="file-name"></div>
   </div>
 
   <div class="field">
