--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,20 +17,19 @@
     <% @events.each do |event| %>
        <div class="iteam">
         <%= link_to event do %>
-          <div class="photo"><%= image_tag (has_image?(event.photos[0]) ? get_image(event.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%><div class="time_box"><%= event.id.generation_time.day %><span>авг</span></div></div>
+          <div class="photo"><%= image_tag (has_image?(event.photos[0]) ? get_image(event.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%><div class="time_box"><%= event.id.generation_time.day %><span>/<%= event.id.generation_time.month %></span></div></div>
           <div class="title"><h3><%= event.title %></h3></div>
           <div class="time"><%= event.id.generation_time.day %>.<%= event.id.generation_time.month %>.<%= event.id.generation_time.year %>, <%= event.tag %>
           </div>
         <% end %>
         </a>
-          <% if current_user.admin? %>
-            <%= link_to 'X', event, method: :delete, data: { confirm: 'Are you sure?' } %>
-          <% end %>
       </div>
     <% end %>
 </div>
 </table>
-<%= link_to 'Добавить', new_event_path, class: 'admin_button' %>
+<% if current_user.admin? %>
+  <%= link_to 'Добавить', new_event_path, class: 'button' %>
+<% end %>
 </div>
  <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
 </section>
