--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -17,7 +17,7 @@
     <% @events.each do |event| %>
        <div class="iteam">
         <%= link_to event do %>
-          <div class="photo"><%= image_tag (has_image?(event.photos[0]) ? get_image(event.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%><div class="time_box"><%= event.id.generation_time.day %><span>авг</span></div></div>
+          <div class="photo"><%= image_tag (has_image?(event.photos[0]) ? get_image(event.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%><div class="time_box"><%= event.id.generation_time.day %><span>/<%= event.id.generation_time.month %></span></div></div>
           <div class="title"><h3><%= event.title %></h3></div>
           <div class="time"><%= event.id.generation_time.day %>.<%= event.id.generation_time.month %>.<%= event.id.generation_time.year %>, <%= event.tag %>
           </div>
