--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,46 +1,45 @@
-<section class="news">
-<%= render partial: 'application/navbar', locals: {back: false}%>
-<%= render partial: 'application/header', locals: {h1:"Оставить отзыв", h1up:"Contacts"}%>
-<div class="content">
-  <div class="text">
+<% if current_user.admin? %>
+      <section class="news">
+      <%= render partial: 'application/navbar', locals: {back: false}%>
+      <%= render partial: 'application/header', locals: {h1:"Отзывы", h1up:"Reviews"}%>
+      <div class="content">
+        <div class="text">
 
-<p id="notice"><%= notice %></p>
+      <p id="notice"><%= notice %></p>
 
-<h1>Reviews</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Description</th>
+            <th>User</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Phone</th>
-      <th>Email</th>
-      <th>Description</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <tbody>
+          <% @reviews.each do |review| %>
+            <tr>
+              <td><%= review.name %></td>
+              <td><%= review.phone %></td>
+              <td><%= review.email %></td>
+              <td><%= review.description %></td>
+              <td><%= review.user_id %></td>
+              <td><%= link_to 'Показать', review %></td>
+              <td><%= link_to 'Редактировать', edit_review_path(review) %></td>
+              <td><%= link_to 'Удалить', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-  <tbody>
-    <% @reviews.each do |review| %>
-      <tr>
-        <td><%= review.name %></td>
-        <td><%= review.phone %></td>
-        <td><%= review.email %></td>
-        <td><%= review.description %></td>
-        <td><%= review.user_id %></td>
-        <td><%= link_to 'Show', review %></td>
-        <td><%= link_to 'Edit', edit_review_path(review) %></td>
-        <td><%= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <br>
 
-<br>
 
-<%= link_to 'New Review', new_review_path %>
+        </div>
+      </div>
 
-  </div>
-</div>
-
-<%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
+      <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
+  <%end%>
