--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,29 +1,12 @@
-<p id="notice"><%= notice %></p>
+<section class="newsiteam">
+ <%= render partial: 'application/navbar', locals: {back: true, back_url: '/'} %>
+ <%= render partial: 'application/header', locals: {h1:'Отзыв отправлен', h1up:"Review"}%>
+<div class="content">
+<div class="text">
+    
+    <p class="center">
+      <p id="notice"><%= notice %></p>
+    </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @review.name %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @review.phone %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @review.email %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @review.description %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @review.user_id %>
-</p>
-
-<%= link_to 'Edit', edit_review_path(@review) %> |
-<%= link_to 'Back', reviews_path %>
+    <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
+</section>
