--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,25 @@
 <section class="news">
 <%= render partial: 'application/navbar', locals: {back: false}%>
-<%= render partial: 'application/header', locals: {h1:@user.fio, h1up:"Bavaria"}%>
+<%= render partial: 'application/header', locals: {h1:@user.fio, h1up:"Info"}%>
 <div class="content">
   <div class="page">
+    <p id="notice"><%= notice %></p>
     <div class="user-images">
       <%= image_tag @user.image.url(:thumb) %>
-      <p id="notice"><%= notice %></p>
     </div>
     <div class="user-info">
       <div class="bs">
-        <div class="bonuses"><%= @data_1C["bonusSum"] %> <span>баллов</span></div>
-        <div class="sale"><span>скидка </span><%= @user.percent %>%</div>
+        <% if(@data_1C["bonusSum"] == -1) %>
+            <div class="balli">
+              Для работы с баллами карты лояльности, необходимо указать ФИО и последние 4 цифры номера карты 
+            </div>
+        <% else %>
+            <div class="bonuses"><span>баллов:</span><b><%= @data_1C["bonusSum"] %></b></div>
+        <% end %>
+            <!--<div class="sale"><span>скидка </span><%= @user.percent %>%</div>-->
       </div>
       <p>
-        <strong>ИФ:</strong>
+        <strong>ФИО:</strong>
         <%= @user.fio %>
       </p>
       <p>
@@ -29,18 +35,21 @@
         <%= @user.card %>
       </p>
   </div>
+
+  <%= link_to 'Редактировать профиль', edit_user_path(@user), class: 'button' %>
+
+  <% if(@data_1C["bonusSum"] > -1) %>
   <div class="balli">
+    <h3>Работа с баллами</h3>
   <%= form_with(model: @bonuse, local: true) do |form| %>
-    Передать пользователю с картой:
+    Передать пользователю с картой (последние 6 цифр):
     <%= form.number_field :card, id: :bonuses_card, value: 0 %>
     Количество бонусов:
     <%= form.number_field :card, id: :bonuses_quantify, value: 0 %>
      <%= link_to 'Передать', bonuses_move_path, class: 'js-bonuses-prize button', method: :post, remote: true %>
   <% end %>
   </div>
+  <% end %>
 </div>
-
-<%= link_to 'Редактировать профиль', edit_user_path(@user), class: 'button' %>
-
 <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
 </section>
