parse type card

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
         <%= @user.email %>
       </p>
       <p>
-        <strong>Карта лояльности:</strong>
+        <strong>Карта лояльности: (последние 6 цифр)</strong>
         <%= @user.card %>
       </p>
   </div>
