--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1104,8 +1104,16 @@ option, select{
 		font-size: 16px;
 		line-height: 20px;
 		box-sizing: border-box;
-
 	}
+		.description img{
+			width:100% !important;
+			height: auto !important;
+		}
+		.description img.width100{
+			width:100% !important;
+			height: auto !important;
+		}
+
 	.description h3{
 		font-size: 24px;
 		font-weight: bold;
