--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -5,16 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Slave</th>
-      <th>Image</th>
-      <th>Link</th>
-      <th>tag</th>
-      <th>Url</th>
-      <th>Link</th>
-      <th>Sort</th>
-      <th>Count</th>
+      <th>cardIdFrom</th>
+      <th>cardIdTo</th>
+      <th>sum</th>
+      <th>time</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,19 +16,13 @@
   <tbody>
     <% @histories.each do |history| %>
       <tr>
-        <td><%= history.title %></td>
-        <td><%= history.description %></td>
-        <td><%= history.slave %></td>
-        <td><%= history.image %></td>
-        <td><%= history.link %></td>
-        <td><%= history.tag %></td>
-        <td><%= history.url %></td>
-        <td><%= history.link %></td>
-        <td><%= history.sort %></td>
-        <td><%= history.count %></td>
+        <td><%= history.cardIdFrom %></td>
+        <td><%= history.cardIdTo %></td>
+        <td><%= history.sum %></td>
+        <td><%= history.time %></td>
         <td><%= link_to 'Show', history %></td>
-        <td><%= link_to 'Edit', edit_history_path(history) %></td>
-        <td><%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><% link_to 'Edit', edit_history_path(history) %></td>
+        <td><% link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -42,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New History', new_history_path %>
+<% link_to 'New History', new_history_path %>
