--- a/app/views/histories/show.html.erb
+++ b/app/views/histories/show.html.erb
@@ -50,5 +50,5 @@
   <%= @history.count %>
 </p>
 
-<%= link_to 'Edit', edit_history_path(@history) %> |
+<% link_to 'Edit', edit_history_path(@history) %> |
 <%= link_to 'Back', histories_path %>
