--- a/app/views/pages/bavariya.html.erb
+++ b/app/views/pages/bavariya.html.erb
@@ -8,8 +8,8 @@
 <p>Пиво с нашей пивоварни оценено не только постоянными гостями, но и престижными международными выставками с присвоением золотых медалей. Вас так же порадует интересное меню, в котором сочетаются блюда европейкой и русской кухни.</p>
 </div>
 <div class="menu">
-  <%= link_to "ОСН. МЕНЮ", asset_path("B_main.pdf") %>
-  <%= link_to "ДЕТСКОЕ МЕНЮ", asset_path("B_det.pdf") %>
+    <%= link_to "ОСН. МЕНЮ",    show_file('bavaria-main').document.url,   title: show_file('bavaria-main').title %>    
+    <%= link_to "ДЕТСКОЕ МЕНЮ", show_file('bavaria-child').document.url,  title: show_file('bavaria-child').title %>
 </div>
 <div class="photos">
           <div class="photo-iteam"><%= image_tag("b01.jpg", class: "tobig", alt: "") %></div>
