--- a/app/views/pages/bavariya.html.erb
+++ b/app/views/pages/bavariya.html.erb
@@ -22,12 +22,14 @@
 <h2>Последние новости</h2>
 <div class="table">
 <% Event.where(tag: /бавария/i).each do |bavaria| %>
-   <div class="iteam">
+ <div class="iteam">
     <%= link_to bavaria do %>
-      <div class="photo"><%= image_tag (has_image?(bavaria.photos[0]) ? get_image(bavaria.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%><div class="time_box"><%= bavaria.id.generation_time.day %><span>авг</span></div></div>
-      <div class="title"><h3><%= bavaria.title %></h3></div>
-      <div class="time"><%= bavaria.id.generation_time.day %>.<%= bavaria.id.generation_time.month %>.<%= bavaria.id.generation_time.year %>, <%= bavaria.tag %>
+      <div class="photo"><%= image_tag (has_image?(bavaria.photos[0]) ? get_image(bavaria.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%></div>
+      <div class="title">
+        <div class="time"><%= bavaria.id.generation_time.day %>.<%= bavaria.id.generation_time.month %>.<%= bavaria.id.generation_time.year %></div>
+         <h3><%= bavaria.title %></h3>
       </div>
+      <div class="tags"><%= bavaria.tag %></div>
     <% end %>
     </a>
   </div>
