--- a/app/views/pages/dorado.html.erb
+++ b/app/views/pages/dorado.html.erb
@@ -22,15 +22,17 @@
 <h2>Последние новости</h2>
 <div class="table">
 <% Event.where(tag: /дорадо/i).each do |dorado| %>
-       <div class="iteam">
-        <%= link_to dorado do %>
-          <div class="photo"><%= image_tag (has_image?(dorado.photos[0]) ? get_image(dorado.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%><div class="time_box"><%= dorado.id.generation_time.day %><span>авг</span></div></div>
-          <div class="title"><h3><%= dorado.title %></h3></div>
-          <div class="time"><%= dorado.id.generation_time.day %>.<%= dorado.id.generation_time.month %>.<%= dorado.id.generation_time.year %>, <%= dorado.tag %>
-          </div>
-        <% end %>
-        </a>
+ <div class="iteam">
+    <%= link_to bavaria do %>
+      <div class="photo"><%= image_tag (has_image?(bavaria.photos[0]) ? get_image(bavaria.photos[0]).image.url(:thumb) : 'backgrounds/no-image320x240.png'), height: '150'%></div>
+      <div class="title">
+        <div class="time"><%= bavaria.id.generation_time.day %>.<%= bavaria.id.generation_time.month %>.<%= bavaria.id.generation_time.year %></div>
+         <h3><%= bavaria.title %></h3>
       </div>
+      <div class="tags"><%= bavaria.tag %></div>
+    <% end %>
+    </a>
+  </div>
     <% end %>
 </div>
 
