--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -906,7 +906,7 @@ option, select{
 				position: absolute;
 				bottom:0;
 				left:0;
-				text-align: center;
+				text-align: left;
 				padding:0 0 20px 160px;
 				margin: 20px auto 0;
 				letter-spacing: 1px;
