--- a/app/views/pages/bavariya.html.erb
+++ b/app/views/pages/bavariya.html.erb
@@ -9,9 +9,13 @@
 </div>
 <div class="menu">
     <% file = show_file('bavaria-main') %>
-    <%= link_to "ОСН. МЕНЮ",    file.document.url, title: file.title if file %>    
+    <%= link_to "ОСН. МЕНЮ",    file.document.url, title: file.title if file %>   
+
     <% file = show_file('child') %>
     <%= link_to "ДЕТСКОЕ МЕНЮ", file.document.url, title: file.title if file %>
+    
+    <% file = show_file('bavaria-lanch') %>
+    <%= link_to "ЛАНЧ",    file.document.url, title: file.title if file %>  
 </div>
 <div class="menu">
     <% file = show_file('newyear') %>
