--- a/app/views/pages/dorado.html.erb
+++ b/app/views/pages/dorado.html.erb
@@ -15,6 +15,9 @@
 
     <% file = show_file('child') %>
     <%= link_to "ДЕТСКОЕ МЕНЮ", file.document.url, title: file.title if file %>
+
+      <% file = show_file('dorado-lanch') %>
+    <%= link_to "ЛАНЧ",    file.document.url, title: file.title if file %>  
 </div>
 <div class="menu">
     <% file = show_file('newyear') %>
