--- a/app/views/pages/dorado.html.erb
+++ b/app/views/pages/dorado.html.erb
@@ -22,6 +22,8 @@
 <div class="menu">
     <% file = show_file('newyear') %>
     <%= link_to "НОВОГОДНЕЕ МЕНЮ", file.document.url, title: file.title if file %>
+    <% file = show_file('newyear2') %>
+    <%= link_to "НОВОГОДНЕЕ МЕНЮ", file.document.url, title: file.title if file %>
 </div>
 <div class="photos">
     <div class="photo-iteam"><%= image_tag("d01.jpg", class: "tobig", alt: "") %></div>
