--- a/app/views/pages/bavariya.html.erb
+++ b/app/views/pages/bavariya.html.erb
@@ -17,7 +17,7 @@
     <% file = show_file('bavaria-lanch') %>
     <%= link_to "ЛАНЧ",    file.document.url, title: file.title if file %>  
 </div>
-<div class="menu">
+<div class="menu2">
     <% file = show_file('newyear') %>
     <%= link_to "МЕНЮ «НОВОГОДНИЕ КОРПОРАТИВЫ»", file.document.url, title: file.title if file %>
     <% file = show_file('newyear2') %>
