--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -18,8 +18,8 @@
               <div class="phone"><%= current_user.phone %></div>
             </li>
             <% end %>
-            <!--<li class="menu"><%= link_to 'Меню доставки', products_path %></li>-->
-            <li class="bron"><a href="/reservations/new">Забронировать столик</a></li>
+            <!-- <li class="menu"><%= link_to 'Меню доставки', products_path %></li> !-->
+            <li class="bron"><a href="/reservations/new">Забронировать</a></li>
             <li class="news"><%= link_to 'События', events_path %></li>
             <li class="otziv"><a href="/reviews/new">Оставить отзыв</a></li>
             <li class="cont"><a href="/pages/contacts">Контакты</a></li>
