--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -27,12 +27,15 @@
                 <div class="next-btn"></div>
             </div>
     </div>
-    <div class="content">
+    <div class="content">        
     	<h1 class="animated fadeInDown"><div class="up">Welcome</div>Добро пожаловать в Хмельхаус!</h1>
         <div class="text">
             <p style="text-align: center;">Ресторан Хмель Хаус – это удивительное место, сочетающее в себе возможность проведения нескольких видов отдыха и разных гастрономических предпочтений.</p>
         </div>
     	<a href="/reservations/new" class="button">Забронировать столик</a>
+
+        <div class="delivery"><%= image_tag("911.jpg", class: "tobig", alt: "") %></div>
+        
         <div class="photos">
           <div class="photo-iteam"><%= image_tag("b02.jpg", class: "tobig", alt: "") %></div>
           <div class="photo-iteam"><%= image_tag("d02.jpg", class: "tobig", alt: "") %></div>
