--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1683,6 +1683,22 @@ img.tobig:hover{
 	margin: auto;
 	border:3px solid #000;
 }
+
+.delivery{
+	width:100%;
+	max-width: 1000px;
+	margin:50px auto 50px;
+	border-radius: 5px;
+	border:3px solid #f1c854;
+}
+
+.delivery img{
+	display: block;
+	width:100%;
+	max-width: 1000px;
+	margin:auto;
+}
+
 @-webkit-keyframes bugfix {
     to {
       padding: 0;
